third_party/move/move-compiler/tests/move_check/typing/ability_constraint_prims_invalid.exp
error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:20:9
   │
 9 │     fun c<T: copy>() {}
   │              ---- 'copy' constraint declared here
   ·
20 │         c<signer>();
   │         ^^^^^^^^^^^
   │         │ │
   │         │ The type 'signer' does not have the ability 'copy'
   │         'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:21:9
   │
 9 │     fun c<T: copy>() {}
   │              ---- 'copy' constraint declared here
   ·
21 │         c<vector<signer>>();
   │         ^^^^^^^^^^^^^^^^^^^
   │         │ │      │
   │         │ │      The type 'vector<signer>' can have the ability 'copy' but the type argument 'signer' does not have the required ability 'copy'
   │         │ The type 'vector<signer>' does not have the ability 'copy'
   │         'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:22:9
   │
 9 │     fun c<T: copy>() {}
   │              ---- 'copy' constraint declared here
   ·
22 │         c<vector<NoC>>();
   │         ^^^^^^^^^^^^^^^^
   │         │ │      │
   │         │ │      The type 'vector<0x42::M::NoC>' can have the ability 'copy' but the type argument '0x42::M::NoC' does not have the required ability 'copy'
   │         │ The type 'vector<0x42::M::NoC>' does not have the ability 'copy'
   │         'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:23:9
   │
10 │     fun k<T: key>() {}
   │              --- 'key' constraint declared here
   ·
23 │         k<u64>();
   │         ^^^^^^^^
   │         │ │
   │         │ The type 'u64' does not have the ability 'key'
   │         'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:24:9
   │
10 │     fun k<T: key>() {}
   │              --- 'key' constraint declared here
   ·
24 │         k<signer>();
   │         ^^^^^^^^^^^
   │         │ │
   │         │ The type 'signer' does not have the ability 'key'
   │         'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:25:9
   │
10 │     fun k<T: key>() {}
   │              --- 'key' constraint declared here
   ·
25 │         k<vector<NoC>>();
   │         ^^^^^^^^^^^^^^^^
   │         │ │
   │         │ The type 'vector<0x42::M::NoC>' does not have the ability 'key'
   │         'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:26:9
   │
10 │     fun k<T: key>() {}
   │              --- 'key' constraint declared here
   ·
26 │         k<vector<NoK>>();
   │         ^^^^^^^^^^^^^^^^
   │         │ │
   │         │ The type 'vector<0x42::M::NoK>' does not have the ability 'key'
   │         'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:27:9
   │
11 │     fun cds<T: copy + drop + store>() {}
   │                ---- 'copy' constraint declared here
   ·
27 │         cds<signer>();
   │         ^^^^^^^^^^^^^
   │         │   │
   │         │   The type 'signer' does not have the ability 'copy'
   │         'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:27:9
   │
11 │     fun cds<T: copy + drop + store>() {}
   │                              ----- 'store' constraint declared here
   ·
27 │         cds<signer>();
   │         ^^^^^^^^^^^^^
   │         │   │
   │         │   The type 'signer' does not have the ability 'store'
   │         'store' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:28:9
   │
11 │     fun cds<T: copy + drop + store>() {}
   │                ---- 'copy' constraint declared here
   ·
28 │         cds<vector<NoC>>();
   │         ^^^^^^^^^^^^^^^^^^
   │         │   │      │
   │         │   │      The type 'vector<0x42::M::NoC>' can have the ability 'copy' but the type argument '0x42::M::NoC' does not have the required ability 'copy'
   │         │   The type 'vector<0x42::M::NoC>' does not have the ability 'copy'
   │         'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:29:9
   │
11 │     fun cds<T: copy + drop + store>() {}
   │                ---- 'copy' constraint declared here
   ·
29 │         cds<vector<Cup<u8>>>();
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │   │      │
   │         │   │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'copy' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'copy'
   │         │   The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'copy'
   │         'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:29:9
   │
11 │     fun cds<T: copy + drop + store>() {}
   │                       ---- 'drop' constraint declared here
   ·
29 │         cds<vector<Cup<u8>>>();
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │   │      │
   │         │   │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'drop' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'drop'
   │         │   The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'drop'
   │         'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:29:9
   │
11 │     fun cds<T: copy + drop + store>() {}
   │                              ----- 'store' constraint declared here
   ·
29 │         cds<vector<Cup<u8>>>();
   │         ^^^^^^^^^^^^^^^^^^^^^^
   │         │   │      │
   │         │   │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'store' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'store'
   │         │   The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'store'
   │         'store' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:35:13
   │
13 │     struct Sc<phantom T: copy> {}
   │                          ---- 'copy' constraint declared here
   ·
35 │         let Sc {} = Sc<signer> {};
   │             ^^^^^      ------ The type 'signer' does not have the ability 'copy'
   │             │           
   │             'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:35:21
   │
13 │     struct Sc<phantom T: copy> {}
   │                          ---- 'copy' constraint declared here
   ·
35 │         let Sc {} = Sc<signer> {};
   │                     ^^^^^^^^^^^^^
   │                     │  │
   │                     │  The type 'signer' does not have the ability 'copy'
   │                     'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:36:13
   │
13 │     struct Sc<phantom T: copy> {}
   │                          ---- 'copy' constraint declared here
   ·
36 │         let Sc {} = Sc<vector<signer>> {};
   │             ^^^^^      --------------
   │             │          │      │
   │             │          │      The type 'vector<signer>' can have the ability 'copy' but the type argument 'signer' does not have the required ability 'copy'
   │             │          The type 'vector<signer>' does not have the ability 'copy'
   │             'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:36:21
   │
13 │     struct Sc<phantom T: copy> {}
   │                          ---- 'copy' constraint declared here
   ·
36 │         let Sc {} = Sc<vector<signer>> {};
   │                     ^^^^^^^^^^^^^^^^^^^^^
   │                     │  │      │
   │                     │  │      The type 'vector<signer>' can have the ability 'copy' but the type argument 'signer' does not have the required ability 'copy'
   │                     │  The type 'vector<signer>' does not have the ability 'copy'
   │                     'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:37:13
   │
13 │     struct Sc<phantom T: copy> {}
   │                          ---- 'copy' constraint declared here
   ·
37 │         let Sc {} = Sc<vector<NoC>> {};
   │             ^^^^^      -----------
   │             │          │      │
   │             │          │      The type 'vector<0x42::M::NoC>' can have the ability 'copy' but the type argument '0x42::M::NoC' does not have the required ability 'copy'
   │             │          The type 'vector<0x42::M::NoC>' does not have the ability 'copy'
   │             'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:37:21
   │
13 │     struct Sc<phantom T: copy> {}
   │                          ---- 'copy' constraint declared here
   ·
37 │         let Sc {} = Sc<vector<NoC>> {};
   │                     ^^^^^^^^^^^^^^^^^^
   │                     │  │      │
   │                     │  │      The type 'vector<0x42::M::NoC>' can have the ability 'copy' but the type argument '0x42::M::NoC' does not have the required ability 'copy'
   │                     │  The type 'vector<0x42::M::NoC>' does not have the ability 'copy'
   │                     'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:38:13
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
38 │         let Sk {} = Sk<u64> {};
   │             ^^^^^      --- The type 'u64' does not have the ability 'key'
   │             │           
   │             'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:38:21
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
38 │         let Sk {} = Sk<u64> {};
   │                     ^^^^^^^^^^
   │                     │  │
   │                     │  The type 'u64' does not have the ability 'key'
   │                     'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:39:13
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
39 │         let Sk {} = Sk<signer> {};
   │             ^^^^^      ------ The type 'signer' does not have the ability 'key'
   │             │           
   │             'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:39:21
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
39 │         let Sk {} = Sk<signer> {};
   │                     ^^^^^^^^^^^^^
   │                     │  │
   │                     │  The type 'signer' does not have the ability 'key'
   │                     'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:40:13
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
40 │         let Sk {} = Sk<vector<NoC>> {};
   │             ^^^^^      ----------- The type 'vector<0x42::M::NoC>' does not have the ability 'key'
   │             │           
   │             'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:40:21
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
40 │         let Sk {} = Sk<vector<NoC>> {};
   │                     ^^^^^^^^^^^^^^^^^^
   │                     │  │
   │                     │  The type 'vector<0x42::M::NoC>' does not have the ability 'key'
   │                     'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:41:13
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
41 │         let Sk {} = Sk<vector<NoK>> {};
   │             ^^^^^      ----------- The type 'vector<0x42::M::NoK>' does not have the ability 'key'
   │             │           
   │             'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:41:21
   │
14 │     struct Sk<phantom T: key> {}
   │                          --- 'key' constraint declared here
   ·
41 │         let Sk {} = Sk<vector<NoK>> {};
   │                     ^^^^^^^^^^^^^^^^^^
   │                     │  │
   │                     │  The type 'vector<0x42::M::NoK>' does not have the ability 'key'
   │                     'key' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:42:13
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                            ---- 'copy' constraint declared here
   ·
42 │         let Scds {} = Scds<signer> {};
   │             ^^^^^^^        ------ The type 'signer' does not have the ability 'copy'
   │             │               
   │             'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:42:13
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                                          ----- 'store' constraint declared here
   ·
42 │         let Scds {} = Scds<signer> {};
   │             ^^^^^^^        ------ The type 'signer' does not have the ability 'store'
   │             │               
   │             'store' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:42:23
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                            ---- 'copy' constraint declared here
   ·
42 │         let Scds {} = Scds<signer> {};
   │                       ^^^^^^^^^^^^^^^
   │                       │    │
   │                       │    The type 'signer' does not have the ability 'copy'
   │                       'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:42:23
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                                          ----- 'store' constraint declared here
   ·
42 │         let Scds {} = Scds<signer> {};
   │                       ^^^^^^^^^^^^^^^
   │                       │    │
   │                       │    The type 'signer' does not have the ability 'store'
   │                       'store' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:43:13
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                            ---- 'copy' constraint declared here
   ·
43 │         let Scds {} = Scds<vector<NoC>> {};
   │             ^^^^^^^        -----------
   │             │              │      │
   │             │              │      The type 'vector<0x42::M::NoC>' can have the ability 'copy' but the type argument '0x42::M::NoC' does not have the required ability 'copy'
   │             │              The type 'vector<0x42::M::NoC>' does not have the ability 'copy'
   │             'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:43:23
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                            ---- 'copy' constraint declared here
   ·
43 │         let Scds {} = Scds<vector<NoC>> {};
   │                       ^^^^^^^^^^^^^^^^^^^^
   │                       │    │      │
   │                       │    │      The type 'vector<0x42::M::NoC>' can have the ability 'copy' but the type argument '0x42::M::NoC' does not have the required ability 'copy'
   │                       │    The type 'vector<0x42::M::NoC>' does not have the ability 'copy'
   │                       'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:44:13
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                            ---- 'copy' constraint declared here
   ·
44 │         let Scds {} = Scds<vector<Cup<u8>>> {};
   │             ^^^^^^^        ---------------
   │             │              │      │
   │             │              │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'copy' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'copy'
   │             │              The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'copy'
   │             'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:44:13
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                                   ---- 'drop' constraint declared here
   ·
44 │         let Scds {} = Scds<vector<Cup<u8>>> {};
   │             ^^^^^^^        ---------------
   │             │              │      │
   │             │              │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'drop' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'drop'
   │             │              The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'drop'
   │             'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:44:13
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                                          ----- 'store' constraint declared here
   ·
44 │         let Scds {} = Scds<vector<Cup<u8>>> {};
   │             ^^^^^^^        ---------------
   │             │              │      │
   │             │              │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'store' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'store'
   │             │              The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'store'
   │             'store' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:44:23
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                            ---- 'copy' constraint declared here
   ·
44 │         let Scds {} = Scds<vector<Cup<u8>>> {};
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^
   │                       │    │      │
   │                       │    │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'copy' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'copy'
   │                       │    The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'copy'
   │                       'copy' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:44:23
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                                   ---- 'drop' constraint declared here
   ·
44 │         let Scds {} = Scds<vector<Cup<u8>>> {};
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^
   │                       │    │      │
   │                       │    │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'drop' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'drop'
   │                       │    The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'drop'
   │                       'drop' constraint not satisifed

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_check/typing/ability_constraint_prims_invalid.move:44:23
   │
15 │     struct Scds<phantom T: copy + drop + store> {}
   │                                          ----- 'store' constraint declared here
   ·
44 │         let Scds {} = Scds<vector<Cup<u8>>> {};
   │                       ^^^^^^^^^^^^^^^^^^^^^^^^
   │                       │    │      │
   │                       │    │      The type 'vector<0x42::M::Cup<u8>>' can have the ability 'store' but the type argument '0x42::M::Cup<u8>' does not have the required ability 'store'
   │                       │    The type 'vector<0x42::M::Cup<u8>>' does not have the ability 'store'
   │                       'store' constraint not satisifed

